--- a/web/index.html
+++ b/web/index.html
@@ -9,44 +9,31 @@
     <link type="text/css" rel="stylesheet" href="style.css"/>
 </head>
 <body id='page'>
+<script type="text/javascript">curpage="index";</script>
 <script type="text/javascript" src="main.js"></script>
-<img src="images/header.png" style='float:left;'>
-<input type='button' value='yubowenok' id='user' class='userinfo' style='margin-right:5px'>
-<img src="images/usericon.png" class='usericon userinfo'>
-<a class='headertext headersel' href='#'>Home</a>
-<a class='headertext' href='#'>Sessions</a>
-<a class='headertext' href='#'>Problems</a>
-<a class='headertext' href='#'>Submissions</a>
-<div class='hline'></div>
+
+<div id='header'></div>
 <div class='container'>
-	<div class='title'>Problem A - Days in the Primary School</div>
-	<div class='problimit'>
-		<span class='problimit'>Time Limit:</span><span class='problimit'>1000MS</span>
-		<span class='problimit'>Memory Limit:</span><span class='problimit'>64MB</span>
+	<div class='title'> Welcome to Lekeat Online Judge </div>
+	<div class='newswrapper'>
+		<ul>
+			<li>Practice session is added. <span class='newsdate'>2014-04-19</span></li>
+			<li>Lekeat OJ is created.<span class='newsdate'>2014-04-17</span></li>
+		</ul>
 	</div>
-	<div class='sectionheader'>Description</div>
-	<div class='sectioncontent'>This is a happy test problem.</div>
-	<div class='sectionheader'>Input</div>
-	<div class='sectioncontent'>Each test case has two integers, <span class='math'>a</span> and <span class='math'>b</span>.</div>
-	<div class='sectionheader'>Output</div>
-	<div class='sectioncontent'>Output the result as a single integer.</div>
-	<div class='sectionheader'>Test Specification</div>
+	<div class='sectionheader'> Running Sessions</div>
 	<div class='sectioncontent'>
-		<table width='50%'>
-		<tr><td>Small</td><td><span class='math'>a,b&nbsp;&le;&nbsp;100</span></td></tr>
-		<tr><td>Medium</td><td><span class='math'>a,b&nbsp;&le;&nbsp;10<sup class='math-index'>18</sup></span></td></tr>
-		<tr><td>Large</td><td><span class='math'>a,b&nbsp;&le;&nbsp;10<sup class='math-index'>100</sup></span></td></tr>
-		</table>
+		<div class='listrow'><a class='listtitle' href='session.html'>Practice Session</a><span class='liststatus'>Permanent</span></div>
+		<div class='listrow'><a class='listtitle' href='#'>Problemset for Programming Beginners</a><span class='liststatus'>Permanent</span></div>
+		<div class='listrow'><a class='listtitle' href='#'>Problemset of Programming Practice</a><span class='liststatus'>Permanent</span></div>
 	</div>
-	<div class='sectionheader'>Sample(s)</div>
+	<div class='sectionheader'> Scheduled Sessions </div>
 	<div class='sectioncontent'>
-		<div>Input</div>
-		<textarea class='sample'>3 5</textarea>
-		<div>Output</div>
-		<textarea class='sample'>8</textarea>
+		<div class='listrow'><a class='listtitle' href='#'>Simulated Interview Test</a><span class='liststatus'>2014-04-30 18:00:00</span></div>
 	</div>
-	<div class='sectionheader'></div>
-	<input type='button' value='Submit' class='submitbtn' id='submit'>
+	<div class='sectionheader'> Past Sessions </div>
+	<div class='sectioncontent'>
+	</div>
 </div>
 </body>
 </html>
