--- a/web/header.html
+++ b/web/header.html
@@ -1,5 +1,5 @@
 <img src="images/header.png">
-<input type='button' value='yubowenok' id='user' class='userinfo' style='margin-right:5px'>
+<input type='button' value='Login' id='user' class='userinfo' style='margin-right:5px'>
 <img src="images/usericon.png" class='usericon userinfo'>
 <a id='hdrindex' class='headertext' href='index.html'>Home</a>
 <a id='hdrsession' class='headertext' href='session.html'>Session</a>
