--- a/web/submission.html
+++ b/web/submission.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 	<title>Lekeat Online Judge</title>
-	<link rel="shortcut icon" href="favicon.ico">
+	<link rel="shortcut icon" href="lekeat/favicon.ico">
 	<meta http-equiv="Content-Type" content="text/html;" />
 	<script type="text/javascript" src="jquery-ui-1.10.4.custom/js/jquery-1.11.0.min.js"></script>
 	<script type="text/javascript" src="jquery-ui-1.10.4.custom/js/jquery-ui-1.10.4.custom.min.js"></script>
@@ -16,16 +16,14 @@
 <div class='container'>
 	<div class='title'>Submission Status</div>
 	<div class='sectionheader'>Practice Session</div>
-	<div class='sectioncontent'>
 	<table width='100%'>
-		<tr class='tr-header'><td>#</td><td>Date</td><td>Handle</td><td>Problem</td><td>Language</td><td>Result</td><td>Time</td><td>Memory</td></tr>
-		<tr><td><a href='result.html'>1000005</a></td><td>2014-04-19 19:45:55</td><td>yubowenok</td><td><a href='problem.html'>A. Multiplication</a></td><td>C++</td><td class='color-ac text-bold'>Accepted</td><td>752MS</td><td>18425KB</td></tr>
-		<tr><td><a href='result.html'>1000004</a></td><td>2014-04-19 19:37:28</td><td>yubowenok</td><td><a href='problem.html'>A. Multiplication</a></td><td>C++</td><td class='color-pac text-bold'>Partially Accepted</td><td>752MS</td><td>18425KB</td></tr>
-		<tr><td><a href='result.html'>1000003</a></td><td>2014-04-19 18:15:09</td><td>yubowenok</td><td><a href='problem.html'>A. Multiplication</a></td><td>C++</td><td class='color-rej text-bold'>Rejected</td><td>3000MS</td><td>1274KB</td></tr>
-		<tr><td><a href='result.html'>1000002</a></td><td>2014-04-19 18:02:35</td><td>yubowenok</td><td><a href='problem.html'>A. Multiplication</a></td><td>C++</td><td class='color-rej text-bold'>Rejected</td><td>17MS</td><td>152KB</td></tr>
-		<tr><td><a href='result.html'>1000001</a></td><td>2014-04-19 18:01:27</td><td>yubowenok</td><td><a href='problem.html'>A. Multiplication</a></td><td>C++</td><td class='color-ce text-bold'>Compile Error</td><td>-</td><td>-</td></tr>
+		<tr class='tr-header'><td>#</td><td>Date</td><td>Handle</td><td>Problem</td><td>Lang</td><td>Result</td><td>Time</td><td>Total Time</td><td>Memory</td></tr>
+		<tr><td><a href='result.html'>1000005</a></td><td>2014-04-19 19:45:55</td><td>yubowenok</td><td><a href='problem.html'>A. Multiplication</a></td><td>C++</td><td class='color-ac text-bold'>Accepted</td><td>752MS</td><td>3072MS</td><td>18425KB</td></tr>
+		<tr><td><a href='result.html'>1000004</a></td><td>2014-04-19 19:37:28</td><td>yubowenok</td><td><a href='problem.html'>A. Multiplication</a></td><td>C++</td><td class='color-pac text-bold'>Partially Accepted</td><td>752MS</td><td>2966MS</td><td>18425KB</td></tr>
+		<tr><td><a href='result.html'>1000003</a></td><td>2014-04-19 18:15:09</td><td>yubowenok</td><td><a href='problem.html'>A. Multiplication</a></td><td>C++</td><td class='color-rej text-bold'>Rejected</td><td>3000MS</td><td>8307MS</td><td>1274KB</td></tr>
+		<tr><td><a href='result.html'>1000002</a></td><td>2014-04-19 18:02:35</td><td>yubowenok</td><td><a href='problem.html'>A. Multiplication</a></td><td>C++</td><td class='color-rej text-bold'>Rejected</td><td>17MS</td><td>109MS</td><td>152KB</td></tr>
+		<tr><td><a href='result.html'>1000001</a></td><td>2014-04-19 18:01:27</td><td>yubowenok</td><td><a href='problem.html'>A. Multiplication</a></td><td>C++</td><td class='color-ce text-bold'>Compile Error</td><td>-</td><td>-</td><td>-</td></tr>
 	</table>
-	</div>
 	<div class='sectionheader'></div>
 	
 </div>
