--- a/web/session.html
+++ b/web/session.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 	<title>Lekeat Online Judge</title>
-	<link rel="shortcut icon" href="favicon.ico">
+	<link rel="shortcut icon" href="lekeat/favicon.ico">
 	<meta http-equiv="Content-Type" content="text/html;" />
 	<script type="text/javascript" src="jquery-ui-1.10.4.custom/js/jquery-1.11.0.min.js"></script>
 	<script type="text/javascript" src="jquery-ui-1.10.4.custom/js/jquery-ui-1.10.4.custom.min.js"></script>
