register, minor fixes

--- a/web/index.html
+++ b/web/index.html
@@ -24,12 +24,12 @@
 	<div class='sectionheader'> Running Sessions</div>
 	<div class='sectioncontent'>
 		<div class='listrow'><a class='listtitle' href='session.html'>Practice Session</a><span class='liststatus'>Permanent</span></div>
-		<div class='listrow'><a class='listtitle' href='#'>Problemset for Programming Beginners</a><span class='liststatus'>Permanent</span></div>
-		<div class='listrow'><a class='listtitle' href='#'>Problemset of Programming Practice</a><span class='liststatus'>Permanent</span></div>
+		<div class='listrow'><a class='listtitle' href='error.html'>Problemset for Programming Beginners</a><span class='liststatus'>Permanent</span></div>
+		<div class='listrow'><a class='listtitle' href='error.html'>Problemset of Programming Practice</a><span class='liststatus'>Permanent</span></div>
 	</div>
 	<div class='sectionheader'> Scheduled Sessions </div>
 	<div class='sectioncontent'>
-		<div class='listrow'><a class='listtitle' href='#'>Simulated Interview Test</a><span class='liststatus'>2014-04-30 18:00:00</span></div>
+		<div class='listrow'><a class='listtitle' href='error.html'>Simulated Interview Test</a><span class='liststatus'>2014-04-30 18:00:00</span></div>
 	</div>
 	<div class='sectionheader'> Past Sessions </div>
 	<div class='sectioncontent'>
