--- a/web/problem.html
+++ b/web/problem.html
@@ -20,7 +20,7 @@
 		<span class='problimit'>Time Limit:</span><span class='problimit'>3000MS</span>
 		<span class='problimit'>Memory Limit:</span><span class='problimit'>64MB</span>
 	</div>
-	<div class='sectionheader'>Description</div>
+	<div class='sectionheader'>Description<input type='button' disabled class='btn pdfbtn' value='PDF' style='float:right'></div>
 	<div class='sectioncontent'>This is a happy test problem. Given two non-negative integers, compute their multiplication.</div>
 	<div class='sectionheader'>Input</div>
 	<div class='sectioncontent'>Each test case has two integers, <span class='math'>a</span> and <span class='math'>b</span>.</div>
