--- a/web/session.html
+++ b/web/session.html
@@ -18,10 +18,10 @@
 	<div class='timeremaining'>Time Remaining: Permanent</div>
 	<div class='sectionheader'>Problems<span class='liststatus'>AC/PAC/ATT</span></div>
 		<div class='listrow'><span class='probcode border-ac'>A</span><a class='listtitle' href='problem.html'>Multiplication</a><span class='liststatus'>3/2/5</span></div>
-		<div class='listrow'><span class='probcode border-pac'>B</span><a class='listtitle' href='#'>Tree Hunt</a><span class='liststatus'>0/1/1</span></div>
-		<div class='listrow'><span class='probcode border-rej'>C</span><a class='listtitle' href='#'>Graph Cutting Game</a><span class='liststatus'>0/0/1</span></div>
-		<div class='listrow'><span class='probcode'>D</span><a class='listtitle' href='#'>Borderline</a><span class='liststatus'>-/-</span></div>
-		<div class='listrow'><span class='probcode'>E</span><a class='listtitle' href='#'>String Factorization</a><span class='liststatus'>-/-</span></div>
+		<div class='listrow'><span class='probcode border-pac'>B</span><a class='listtitle' href='error.html'>Tree Hunt</a><span class='liststatus'>0/1/1</span></div>
+		<div class='listrow'><span class='probcode border-rej'>C</span><a class='listtitle' href='error.html'>Graph Cutting Game</a><span class='liststatus'>0/0/1</span></div>
+		<div class='listrow'><span class='probcode'>D</span><a class='listtitle' href='error.html'>Borderline</a><span class='liststatus'>-/-</span></div>
+		<div class='listrow'><span class='probcode'>E</span><a class='listtitle' href='error.html'>String Factorization</a><span class='liststatus'>-/-</span></div>
 	<div class='sectionheader'></div>
 	
 	<input type='button' value='Standings' class='bottombtn'>
