add source/result time/mem info

--- a/web/register.html
+++ b/web/register.html
@@ -25,6 +25,7 @@
     </div>
 	<div class='sectionheader'></div>
     <input type='button' value='Register' class='bottombtn' id='register'>
+    <input type='button' value='Cancel' class='bottombtn' id='cancel' onclick='window.location="index.html"'>
 </div>
 </body>
 </html>
