--- a/web/result.html
+++ b/web/result.html
@@ -15,22 +15,33 @@
 
 <div id='header'></div>
 <div class='container'>
-	<div class='title'> Judging Submission #1234567</div>
-	<div class='text-bold'>Status:<span id='status' class='color-run judgestatus'>Running...</span></div>
+	<div id='title' class='title'> Judging Submission #1234567</div>
+	<div class='subinfo'>
+        <span>Handle:</span><span style='font-weight:normal'>yubowenok</span>
+        <span>Date:</span><span style='font-weight:normal'>2014-04-19 18:30:15</span>
+		<span>Problem:</span><span style='font-weight:normal'><a href='problem.html'>A. Multiplication</a></span>
+        <span>Language:</span><span style='font-weight:normal'>C++</span><br>
+    </div>
+    <div class='subinfo'>
+        <span>Time:</span><span style='font-weight:normal'>752MS</span>
+        <span>Total Time:</span><span style='font-weight:normal'>18574MS</span>
+        <span>Memory</span><span style='font-weight:normal'>1752KB</span>
+    </div>
 	
+	<div class='text-bold'>Status:<span id='status' class='color-run judgestatus'>Running...</span></div>
 	<div id="progress" class="judgeprogress"></div>
 		
-	<div class='sectionheader'> Group Small <span class='groupresult color-run'>PENDING</span></div>
+	<div class='sectionheader'> Group Small <span id='groupresult-small' class='groupresult color-run'>PENDING</span></div>
 	<div class='sectioncontent'>
-		<div class='judgegroup'>
-			<span class='testcase color-ac text-bold'><span class='testid bgcolor-ac'>1</span>OK</span>
-			<span class='testcase color-ac text-bold'><span class='testid bgcolor-ac'>2</span>OK</span>
-			<span class='testcase color-ac text-bold'><span class='testid bgcolor-ac'>3</span>OK</span>
-			<span class='testcase color-ac text-bold'><span class='testid bgcolor-ac'>4</span>OK</span>
-			<span class='testcase color-run text-bold'><span class='testid bgcolor-run'>5</span>Running...</span>
-			<span class='testcase'><span class='testid'>6</span>Waiting</span>
-			<span class='testcase'><span class='testid'>7</span>Waiting</span>
-			<span class='testcase'><span class='testid'>8</span>Waiting</span>
+		<div class='judgegroup' id='group-small'>
+			<span class='testcase color-ac text-bold'><span class='testid bgcolor-ac'>1</span><span class='testverdict'>OK</span></span>
+			<span class='testcase color-ac text-bold'><span class='testid bgcolor-ac'>2</span><span class='testverdict'>OK</span></span>
+			<span class='testcase color-ac text-bold'><span class='testid bgcolor-ac'>3</span><span class='testverdict'>OK</span></span>
+			<span class='testcase color-ac text-bold'><span class='testid bgcolor-ac'>4</span><span class='testverdict'>OK</span></span>
+			<span class='testcase color-run text-bold'><span class='testid bgcolor-run'>5</span><span class='testverdict'>Running...</span></span>
+			<span class='testcase'><span class='testid'>6</span><span class='testverdict'>Queueing</span></span>
+			<span class='testcase'><span class='testid'>7</span><span class='testverdict'>Queueing</span></span>
+			<span class='testcase'><span class='testid'>8</span><span class='testverdict'>Queueing</span></span>
 		</div>
 	</div>
 	<div class='sectionheader'> Group Medium <span class='groupresult color-rej'>FAILED</span></div>
