--- a/web/source.html
+++ b/web/source.html
@@ -24,9 +24,17 @@
 <div id='header'></div>
 <div class='container'>
     <div class='title'>Source Code #1234567</div>
-    <div>
-        <span class='text-bold'>Language:</span><span class='left1em'>C++</span>
-        <span class='text-bold left1em'>Status:</span><span class='color-pac left1em text-bold'>Partially Accepted</span>
+    <div class='subinfo'>
+        <span>Handle:</span><span style='font-weight:normal'>yubowenok</span>
+        <span>Date:</span><span style='font-weight:normal'>2014-04-19 18:30:15</span>
+        <span>Problem:</span><span style='font-weight:normal'><a href="problem.html">A. Multiplication</a></span>
+        <span>Language:</span><span style='font-weight:normal'>C++</span><br>
+    </div>
+    <div class='subinfo'>
+        <span>Time:</span><span style='font-weight:normal'>752MS</span>
+        <span>Total Time:</span><span style='font-weight:normal'>18574MS</span>
+        <span>Memory</span><span style='font-weight:normal'>1752KB</span>
+        <span>Status:</span><span class='color-pac text-bold'>Partially Accepted</span>
     </div>
     <div class='sectionheader'><a id='selall'>Select All</a></div>
     <div class='sectioncontent'>
