fix span inherit problem

--- a/web/source.html
+++ b/web/source.html
@@ -24,18 +24,18 @@
 <div id='header'></div>
 <div class='container'>
     <div class='title'>Source Code #1234567</div>
-    <div class='subinfo'>
-        <span>Handle:</span><span style='font-weight:normal'>yubowenok</span>
-        <span>Date:</span><span style='font-weight:normal'>2014-04-19 18:30:15</span>
-        <span>Problem:</span><span style='font-weight:normal'><a href="problem.html">A. Multiplication</a></span>
-        <span>Language:</span><span style='font-weight:normal'>C++</span><br>
+    <div style='margin-bottom: 10px'>
+        <span class='subinfo'>Handle:</span><span class='subinfo' style='font-weight:normal'>yubowenok</span>
+        <span class='subinfo'>Date:</span><span class='subinfo' style='font-weight:normal'>2014-04-19 18:30:15</span>
+		<span class='subinfo'>Problem:</span><span class='subinfo' style='font-weight:normal'><a href='problem.html'>A. Multiplication</a></span>
+        <span class='subinfo'>Language:</span><span class='subinfo' style='font-weight:normal'>C++</span><br>
     </div>
-    <div class='subinfo'>
-        <span>Time:</span><span style='font-weight:normal'>752MS</span>
-        <span>Total Time:</span><span style='font-weight:normal'>18574MS</span>
-        <span>Memory</span><span style='font-weight:normal'>1752KB</span>
-        <span>Status:</span><span class='color-pac text-bold'>Partially Accepted</span>
+    <div style='margin-bottom: 10px'>
+        <span class='subinfo'>Time:</span><span class='subinfo' style='font-weight:normal'>752MS</span>
+        <span class='subinfo'>Total Time:</span><span class='subinfo' style='font-weight:normal'>18574MS</span>
+        <span class='subinfo'>Memory</span><span class='subinfo' style='font-weight:normal'>1752KB</span>
     </div>
+    
     <div class='sectionheader'><a id='selall'>Select All</a></div>
     <div class='sectioncontent'>
     <pre id="srctext" class='brush: cpp; toolbar: false;'></pre>
